[package]
name = "hello-client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptivemsg = { git = "https://github.com/adaptivemsg/adaptivemsg-rust.git" }
hello = { git = "https://github.com/adaptivemsg/hello-server-go.git" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
clap = { version = "=4.4.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
